Dashboard z-index fix (button)

--- a/chance/src/app/Page-Components/dashboard/dashboard.component.scss
+++ b/chance/src/app/Page-Components/dashboard/dashboard.component.scss
@@ -73,6 +73,7 @@
 }
 
 .no-posts button{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
